force-app/main/default/objects/RV_Master_Blaster__c/fields/CUTR__c.field-meta.xml
<CustomField>
    <fullName>CUTR__c</fullName>
    <label>CUTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>