force-app/main/default/objects/RV_Master_Blaster__c/fields/FA_Combo__c.field-meta.xml
<CustomField>
    <fullName>FA_Combo__c</fullName>
    <label>FA-Combo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>