force-app/main/default/objects/RV_Master_Blaster__c/fields/GasGroup__c.field-meta.xml
<CustomField>
    <fullName>GasGroup__c</fullName>
    <label>GasGroup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>