force-app/main/default/objects/RV_Master_Blaster__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <label>NACE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>