force-app/main/default/objects/RV_Master_Blaster__c/fields/OP_Percent__c.field-meta.xml
<CustomField>
    <fullName>OP_Percent__c</fullName>
    <label>OP-Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>