force-app/main/default/objects/RV_Master_Blaster__c/fields/PosDir__c.field-meta.xml
<CustomField>
    <fullName>PosDir__c</fullName>
    <label>PosDir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>