force-app/main/default/objects/RV_Master_Blaster__c/fields/PosEffDia__c.field-meta.xml
<CustomField>
    <fullName>PosEffDia__c</fullName>
    <label>PosEffDia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>