force-app/main/default/objects/RV_Master_Blaster__c/fields/PosFullOP__c.field-meta.xml
<CustomField>
    <fullName>PosFullOP__c</fullName>
    <label>PosFullOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>