force-app/main/default/objects/RV_Master_Blaster__c/fields/PosIntMethod__c.field-meta.xml
<CustomField>
    <fullName>PosIntMethod__c</fullName>
    <label>PosIntMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>