force-app/main/default/objects/RV_Master_Blaster__c/fields/VacDir__c.field-meta.xml
<CustomField>
    <fullName>VacDir__c</fullName>
    <label>VacDir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>