force-app/main/default/objects/RV_Master_Blaster__c/fields/VacEffDia__c.field-meta.xml
<CustomField>
    <fullName>VacEffDia__c</fullName>
    <label>VacEffDia</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>