force-app/main/default/objects/RV_Master_Blaster__c/fields/VacFullOP__c.field-meta.xml
<CustomField>
    <fullName>VacFullOP__c</fullName>
    <label>VacFullOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>