force-app/main/default/objects/RV_Master_Blaster__c/fields/VacIntMethod__c.field-meta.xml
<CustomField>
    <fullName>VacIntMethod__c</fullName>
    <label>VacIntMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>