force-app/main/default/objects/RV_Master_Blaster__c/fields/VacLoad__c.field-meta.xml
<CustomField>
    <fullName>VacLoad__c</fullName>
    <label>VacLoad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>