force-app/main/default/objects/RV_Master_Blaster__c/fields/VacMinOP__c.field-meta.xml
<CustomField>
    <fullName>VacMinOP__c</fullName>
    <label>VacMinOP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>