force-app/main/default/objects/RV_Master_Blaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDC_Ext_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CDC_Ext_ID__c</field>
        <operation>equals</operation>
        <value>24</value>
    </filters>
    <label>All</label>
</ListView>